<resources>
    <string name="app_name">MapApplicationKotlin</string>
    <string name="title_activity_maps">Map</string>
    <string name="sing_up">Üye Ol</string>
    <string name="email">Email</string>
    <string name="username">Kullanıcı Adı</string>
    <string name="password">Şifre</string>
    <string name="entry">Giriş</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="gorevler">Görevler</string>
    <string name="adress_arar">Adres Ararı</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>