<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:weightSum="3"
    android:gravity="center"
    tools:context=".activities.RegisterActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_singup_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/HintText"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:errorTextAppearance="@style/ErrorText"
        app:errorEnabled="true">
        <EditText android:id="@+id/singup_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:autofillHints="" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_singup_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/HintText"
        app:errorTextAppearance="@style/ErrorText"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:errorEnabled="true">
        <EditText android:id="@+id/singup_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/username"
            android:autofillHints="" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_singup_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:hintTextAppearance="@style/HintText"
        app:errorTextAppearance="@style/ErrorText"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/singup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_shape_green"
        android:text="@string/sing_up"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="50dp"
        android:textColor="@color/lightColor"
        android:textAllCaps="true"
        android:alpha="0.65"/>
</LinearLayout>