<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:weightSum="3"
    android:gravity="center">

    <TextView
        android:id="@+id/textEntry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:text="@string/entry"
        android:textSize="50sp"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textColor="@color/darkBlue"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/HintText"
            app:errorTextAppearance="@style/ErrorText"
            app:errorEnabled="true">
            <EditText android:id="@+id/input_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/username"
                android:autofillHints="" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:hintTextAppearance="@style/HintText"
            app:errorTextAppearance="@style/ErrorText"
            app:passwordToggleEnabled="true"
            app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/textButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/background_shape_green"
            android:text="@string/sing_up"
            android:textColor="@color/darkGrey"
            android:backgroundTint="@color/cardview_light_background"
            android:onClick="SingUpButton"
            android:textSize="15sp"
            android:layout_marginBottom="30dp"/>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_shape_green"
        android:text="@string/entry"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/lightColor"
        android:textAllCaps="true"
        android:alpha="0.65"/>
</LinearLayout>